# ai-llm-agents

./: 001-1-github-copilot.ipynb  001-3-chatgpt.ipynb  001-4-claude.ipynb  001-5-cursor.ipynb  002-3-chatgpt.ipynb  002-5-cursor.ipynb  101-ag2-quick-start.ipynb  102-ag2-structured-outputs.ipynb  103-ag2-basics-2.ipynb  104-ag2-basics-3.ipynb  106-ag2-basics-5.ipynb  107-ag2-basics-6.ipynb  108-ag2-basics-7.ipynb  109-ag2-basics-8.ipynb  110-ag2-basics-9.ipynb  112-ag2-basics-11.ipynb  113-ag2-advanced-1.ipynb  116-ag2-advanced-4.ipynb  117-ag2-advanced-5.ipynb  118-ag2-advanced-6.ipynb  119-ag2-advanced-7.ipynb  120-ag2-advanced-8.ipynb  README-streamlit.md  README.md  requirements-last.txt  requirements.txt
0-GUIDE/: 01-01-cs4a.md  01-01-cwa.md  01-01a.md  01-02-cs4a.md  01-02-cwa.md  01-02a.md  01-03-cs4a.md  01-03-cwa.md  01-03a.md  01-04-cs4a.md  01-04-cwa.md  01-04a.md  01-05-cs4a.md  01-05-cwa.md  01-05a.md  01-06-cs4a.md  01-06-cwa.md  01-06a.md  01-07-cs4a.md  01-07-cwa.md  01-07a.md  01-08-cs4a.md  01-08-cwa.md  01-08a.md  01-09-cs4a.md  01-09-cwa.md  01-09a.md  01-10-cs4a.md  01-10-cwa.md  01-10a.md  01-11-cs4a.md  01-11-cwa.md  01-11a.md  01-ai-agents-cz.md  01-ai-agents-en.md  02-01-cs4a.md  02-01-cwa.md  02-01a.md  02-01b.md  02-02-cs4a.md  (+71 more)
0-PROJECTS/: 01-01-01-CZ.md  01-01-01a.md  01-01-01b.md  01-01-01c.md  01-01-02-CZ.md  01-01-02.md  01-01-03-CZ.md  01-01-03.md  01-01-04-CZ.md  01-01-04.md  01-01-05-CZ.md  (+443 more)
200-crewai/201_crewai_quickstart/: README.md  pyproject.toml
200-crewai/201_crewai_quickstart/src/201_crewai_quickstart/: crew.py  main.py
(+206 files in other folders)
